# Kracker

./: CMakeLists.txt  LICENSE  README.md  kracker.desktop.in
src/: MainWindow.cpp  MainWindow.hpp  main.cpp
